src/objects/inscor__Manifest__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Business_Category_Auto_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Category Auto Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Hide_From_Services__c</fullName>
        <label>Hide From Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Hide_From_Services</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Manifest_Name__c</fullName>
        <label>Manifest Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Manifest_Receiving_Options__c</fullName>
        <label>Manifest Receiving Options</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Receive against Manifest Only</fullName>
                </value>
                <value>
                    <fullName>Allow Additional Receipts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manifests</relationshipLabel>
        <relationshipName>Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Manifest</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Manifest_Name__c</columns>
        <columns>inscor__Repair_Vendor__c</columns>
        <columns>inscor__Received_Date__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAID-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manifests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>inscor__Business_Category_blank_Auto_Update</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Business_Category_Auto_Update__c == true &amp;&amp; NOT(ISBLANK(TEXT(inscor__Business_Category__c)))</errorConditionFormula>
        <errorMessage>Auto Update Cannot be true when Business Category Selected.</errorMessage>
    </validationRules>
</CustomObject>